@@ -15,9 +15,9 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-bin_SCRIPTS = pk-elfextractor pk-strings
+bin_SCRIPTS = pk-elfextractor pk-strings pk-bin2poke
 CLEANFILES = $(bin_SCRIPTS)
-EXTRA_DIST = pk-elfextractor.in pk-strings.in
+EXTRA_DIST = pk-elfextractor.in pk-strings.in pk-bin2poke.in
 
 do_subst = sed -e 's,[@]bindir[@],$(bindir),g'
 
@@ -28,3 +28,8 @@ pk-elfextractor: pk-elfextractor.in Makefile
 pk-strings: pk-strings.in Makefile
 	$(do_subst) < $(srcdir)/pk-strings.in > pk-strings
 	chmod +x pk-strings
+
+pk-bin2poke: pk-bin2poke.in Makefile
+	$(do_subst) < $(srcdir)/pk-bin2poke.in > pk-bin2poke
+	chmod +x pk-bin2poke
+
